--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,12 @@ if (new File(projectDir, '.git').exists()) {
 }
 
 repositories {
-	maven { url = "http://coloredlightscore.us.to/maven/chisel-2-dev/" }
+    maven { url = "http://maven.tterrag.com/" }
 }
 
 dependencies {
-  compile "com.cricketcraft.chisel:Chisel2:${chisel_version}:deobf"
-  compile fileTree(dir: 'libs', include: '*.jar')
+    compile "team.chisel:Chisel:${chisel_version}:deobf"
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 minecraft {
